# NPKit

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/source/: conf.py  index.rst
examples/: minimal_example.py  multiple_observable_example.py
src/npkit/: __init__.py  _scan.py  likelihood.py  measurements.py  neyman.py  observables.py  plot.py  stats.py  utils.py
tests/: test_chernoff_boundary.py  test_grid_belt.py  test_wilks_linear.py
